--- a/MyFirstProject/MyFirstProject.csproj
+++ b/MyFirstProject/MyFirstProject.csproj
@@ -20,6 +20,11 @@
     <Folder Include="ViewViewModels\ListView\" />
     <Folder Include="ViewViewModels\Controls\" />
     <Folder Include="ViewViewModels\SQLite\" />
-    <Folder Include="ViewViewModels\Layout\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="ViewViewModels\Layout\LayoutView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
