--- a/MyFirstProject/MyFirstProject.csproj
+++ b/MyFirstProject/MyFirstProject.csproj
@@ -16,14 +16,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ViewViewModels\Image\" />
-    <Folder Include="ViewViewModels\ListView\" />
-    <Folder Include="ViewViewModels\Controls\" />
-    <Folder Include="ViewViewModels\SQLite\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <EmbeddedResource Update="ViewViewModels\Controls\ControlsView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="ViewViewModels\Image\ImageView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="ViewViewModels\Layout\LayoutView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="ViewViewModels\ListView\ListViewView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="ViewViewModels\SQLite\SQLiteView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
