--- a/MyFirstProject/MyFirstProject.csproj
+++ b/MyFirstProject/MyFirstProject.csproj
@@ -22,7 +22,7 @@
     <EmbeddedResource Update="ViewViewModels\Image\ImageView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="ViewViewModels\Layout\Absolute\AbsolutePage\AbsolutePageView.xaml">
+    <EmbeddedResource Update="ViewViewModels\Layout\AbsolutePage\AbsolutePageView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="ViewViewModels\Layout\Absolute\AbsoluteView.xaml">
