--- a/MyFirstProject/MyFirstProject.csproj
+++ b/MyFirstProject/MyFirstProject.csproj
@@ -60,6 +60,9 @@
     <EmbeddedResource Update="ViewViewModels\Controls\DualPicker\DualPickerView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="ViewViewModels\Controls\DualPicker\VMPicker\VMPickerView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="ViewViewModels\Controls\Entry\EntryView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
